[tool.poetry]
name = "pylab-snake"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.0"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pylint = "^2.6.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
