[tool.poetry]
name = "pylab-snake"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
